5.4.6

NEW
    - Added ability to move movers pixel by pixel

FIXES
    - Fix some BG HUD issues
    - Update locals

5.4.5 (hotfix)

NEW
    - Added inspection frame skin
    - Added dress-up frame skin
    - Skin more default fonts with the GW2 UI fonts
    - Re-added "Sort to last bag" option

FIXES
    - Show combo points for druid in cat form correctly
    - Fix dynamic cam mode (was in conflict with the new motion sickness option)
    - Fix "Boss Button" and "Zone Ability" mover and keybind issues
    - Update locals

5.4.4

NEW
    - Added "Boss Button" and "Zone Ability" to Move HUD

FIXES
    - Show combo points for druid in cat form correctly
    - Fix Bankframe issue in combination with separate bags
    - Bug fixes

5.4.3

FIXES
    - Fix Bags if the account has no authenticator
    - Fix raid control error during combat

5.4.2

NEW
    - Barbershop skin
    - HUD Settings: "Apply UI scale to all scaleable frames"
    - Added option to show inventory separated
    - Added option to show unit gender in tooltip

FIXES
    - Bug fixes for raidcontrol frame
    - Destruction Warlooks: We steel the blizzard Soul shards as our classpower so you can see also soul shard fragments (temp, till we have our own graphic)
    - Bonus Roll should now show properly
    - Garrison minimapbutton is now shown

5.4.1

NEW
    - Added Maelstrom classpowerbar (shaman)

FIXES
    - Spec spellbooktab is now only with a spec available
    - Fix some lua errors
    - Set default quest tracker into top right corner

5.4.0
    Update for Shadowlands Pre-Patch

    Note: Quest Tracker is disabled for now, need a complete rework

NEW
    - Sizer for Heropanel
    - Redo "Move HUD" mode:
        - Frame are now moving with there movers
        - Added new frames
        - Added "Little Settings Window": Right click a mover to see extra options for that frame (atm only scaling)
    - Now you can collaps Addons in the currency tab
    - Export and import Profiles